docker-all-in-one/examples/vanilla/base.tmpl.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gluu
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Service
metadata:
  name: flex-aio
  labels:
    app: flex-aio
  namespace: gluu
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http-proxy
  selector:
    app: flex-aio

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-aio
  labels:
    app: flex-aio
    # APP_NAME: auth-server
  namespace: gluu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flex-aio
  template:
    metadata:
      labels:
        app: flex-aio
        # APP_NAME: auth-server
      namespace: gluu
    spec:
      containers:
      - name: flex-aio
        image: ${FLEX_AIO_IMAGE}
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "8Gi"
          limits:
            memory: "16Gi"
        # ports:
        # - containerPort: 8080
        volumeMounts:
          - name: flex-aio-gen-params
            mountPath: /opt/jans/configurator/db/generate.json
            subPath: generate.json
          - name: tls-certificate
            mountPath: /opt/jans/configurator/certs/web_https.crt
            subPath: web_https.crt
          - name: tls-certificate
            mountPath: /opt/jans/configurator/certs/web_https.key
            subPath: web_https.key
          - name: flex-aio-ssa-jwt
            mountPath: /etc/jans/conf/ssa
            subPath: ssa
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          runAsGroup: 1000
        livenessProbe:
          exec:
            command: ["python3", "/app/flex_aio/jans_auth/healthcheck.py"]
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          exec:
            command: ["python3", "/app/flex_aio/jans_auth/healthcheck.py"]
          initialDelaySeconds: 25
          periodSeconds: 25
      volumes:
        - name: flex-aio-gen-params
          secret:
            secretName: flex-aio-gen-params
        - name: flex-aio-ssa-jwt
          secret:
            secretName: flex-aio-ssa-jwt
        - name: tls-certificate
          secret:
            secretName: tls-certificate
            items:
              - key: tls.crt
                path: web_https.crt
              - key: tls.key
                path: web_https.key
      hostAliases:
      - ip: ${NODE_IP_ADDR}
        hostnames:
        - flex-aio.gluu.org

---

apiVersion: v1
kind: Namespace
metadata:
  name: sql

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
  namespace: sql
spec:
  ports:
  - port: 3306
    name: mysql
  selector:
    app: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
  namespace: sql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
      namespace: sql
    spec:
      containers:
      - name: mysql
        image: docker.io/mysql:8.0.30
        resources:
          requests:
            memory: "1000Mi"
          limits:
            memory: "1536Mi"
        ports:
        - containerPort: 3306
