docker-all-in-one/examples/vanilla/istio-ingress.yaml

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: flex-aio-gateway
  namespace: gluu
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - flex-aio.gluu.org
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - flex-aio.gluu.org
      tls:
        mode: SIMPLE
        credentialName: istio-tls-certificate

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-ingress-flex-aio
  namespace: gluu
spec:
  hosts:
    - flex-aio.gluu.org
  gateways:
    - flex-aio-gateway
  http:
    - name: flex-aio-base
      match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: flex-aio.gluu.svc.cluster.local
            port:
              number: 8080

---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: istio-ingress-flex-aio
  namespace: gluu
spec:
  host: flex-aio.gluu.org
  trafficPolicy:
    tls:
      mode: SIMPLE
