docker-all-in-one/examples/vanilla/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flex-aio
  namespace: gluu
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  tls:
    - hosts:
      - flex-aio.gluu.org
      secretName: tls-certificate
  ingressClassName: nginx
  rules:
  - host: flex-aio.gluu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flex-aio
            port:
              number: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP from its pool if not
  # specified. You can also specify one manually.
  # loadBalancerIP: x.y.z.a
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
